# moixllik-game

./: CNAME  Cargo.toml  README.md  index.html  justfile  robots.txt
.github/workflows/: ubuntu.yml  windows.yml
assets/: icon_16.raw  icon_32.raw  icon_64.raw  style.css
assets/js/: board.js
board/: index.html  main.js
pkg/: app.wasm  app.wasm.br
play/: index.html
src/: board.rs  game.rs  main.rs  sound.rs
src/forms/: about.rs  config.rs  mod.rs  mode_andes.rs  mode_map.rs  mode_math.rs  mode_streamer.rs
src/modes/: andes.rs  map.rs  math.rs  mod.rs  streamer.rs
