[package]
name = "moixllik-game"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
panic = "abort"
opt-level = "z"
codegen-units = 1

[dependencies]
egui = { version = "0.31.1", default-features = false }
egui-macroquad = { version = "0.17.3", default-features = false }
macroquad = { version = "0.4.14", default-features = false }
