[package]
name = "moixllik-game"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
panic = "abort"
opt-level = "z"
codegen-units = 1

[dependencies]
egui = { version = "0.31", default-features = false }
egui-macroquad = { version = "0.17", default-features = false, features=["audio"] }
macroquad = { version = "0.4", default-features = false, features=["audio", "quad-snd"] }
quad-snd = "0.2.8"
